# secure-banking-system

./: .clang-tidy  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/src/: AccountStore.cpp  AccountStore.hpp  Client.cpp  Server.cpp  Server.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
backend/ssl/: server.crt
frontend/: CMakeLists.txt
frontend/src/: MainWindow.cpp  MainWindow.hpp
proxy/: package.json
